# mcp

./: automation_results.jsonl  bbtest.py  bridge-server.js  cf-state.json  generation_results.jsonl  index.ts  input.jsonl  package-lock.json  package.json  packagemcp.json  pyproject.toml  session-manager.js  session-manager1.js  sh.py  sh2.py  sh3.py  sh4.py  sh5.py  sh6.py  shtool.py  start.sh  start_servers.js  test_connection.py  test_mcp.py  trick.py  ws_only.js
src/: config.ts  context.ts  server.ts  ws.ts
src/tools/: common.ts  custom.ts  schemas.ts  snapshot.ts
src/utils/: messaging.ts  port.ts
tools/: common.ts  custom.ts
